@@ -8,7 +8,6 @@
     - different image uploading service
     - widget with just the unread numbers on it
     - tweetmarker
-    - link shortener
     - instapaper mobilizer
     - nearby tweets
     - pictures timeline on profiles
@@ -31,5 +30,4 @@
     -- search by real name or screenname
     -- 7 in layout for phones in landscape
     -- condensed roboto font option
-    -- preference for what page to open on a tweet
-    -- change color to blue
+    -- change color to blue option
