@@ -113,4 +113,16 @@
         <item>@string/from_file</item>
     </string-array>
 
+    <string-array name="font_type">
+        <item>@string/device</item>
+        <item>@string/roboto_light</item>
+        <item>@string/roboto_condensed</item>
+    </string-array>
+
+    <string-array name="font_type_inserted">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+    </string-array>
+
 </resources>
